--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "handout.doc.tar.xz": a95e976cc232a2b812f92ae8ff0419fc353491b9
-  "handout.tar.xz": 8ae927d1131aaf653b304765de70671d18bc55ef
+  handout.doc.tar.xz: b48826fa2624f8f501da9e47457f7923e3f88445
+  handout.tar.xz: b63783d676ef2680619d471eafcb5840469be701
