--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  handout.doc.tar.xz: b48826fa2624f8f501da9e47457f7923e3f88445
-  handout.tar.xz: b63783d676ef2680619d471eafcb5840469be701
+  handout.doc.r43962.tar.xz: 3b53daea0c1793b173bd916a40edf1edb3528419
+  handout.r43962.tar.xz: b2a9a46a2d7011bb6345771ff0459d27392b063e
